# Supermarket_Modeling

./: CMakeLists.txt  Factory.cpp  Factory.h  FileReader.cpp  FileReader.h  Freezer.cpp  Freezer.h  Product.cpp  Product.h  Refrigerator.cpp  Refrigerator.h  Shelve.cpp  Shelve.h  Supermarket.cpp  Supermarket.h  Truck.cpp  Truck.h  main.cpp  products.txt
